syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/levakin/amqp-rpc/examples/helloworld/proto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc ReturnErr (ReturnErrRequest) returns (google.protobuf.Empty) {}
}

message ReturnErrRequest {
  string message = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message SomeErrorDetails {
  string info = 1;
}
